--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "my-app",
+  "name": "contact-us-mail-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
@@ -16,16 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/perfect090/contact-us-mail-react.git"
-  },
   "author": "Obioha Kingsley",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/perfect090/contact-us-mail-react/issues"
-  },
-  "homepage": "https://github.com/perfect090/contact-us-mail-react#readme",
   "eslintConfig": {
     "extends": "react-app"
   },
